# ChangeLog for net-im/psi-captchaforms
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-captchaforms-0.0.7_pre3377.ebuild:
  version bump

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-captchaforms-0.0.7_pre3076.ebuild:
  version bump
