@@ -1,7 +1,9 @@
 DIST psi-captchaforms-0.0.7_pre3076.tar.xz 7404 RMD160 ec90b7ed84866c04d4252448b3bb64d92e7d4402 SHA1 88f551e496645c0dea1b6fef9e64588df85856d0 SHA256 e3c4aea0ff0e53b958c82ec871e7927be9c0e9bc690eaa2c8da9e43a8f7cc144
 DIST psi-captchaforms-0.0.7_pre3377.tar.xz 7444 RMD160 63793e5875655dcf4fe00eea1e5488389488f93d SHA1 987fe97b4182e3fd5431e78848d8ab831d980047 SHA256 a6d661d62458b20b20558aef04d59388cb8dc565717a5ef4bf91b8cd08f37281
+DIST psi-captchaforms-0.0.8_pre3409.tar.xz 7480 RMD160 e2bd96a14c397554317a2357d4f29df993646af7 SHA1 4a76b1d2ff380896debb41fbd1cf1ba759b72985 SHA256 0fffb160b3f9fb1e2061e622972b3c4936cc46b6288e598a09a215a0a18e0701
 EBUILD psi-captchaforms-0.0.7_pre3076.ebuild 232 RMD160 30e0396394d42ef68a493b610d0c3287ef87457f SHA1 a401eec094de60b4ad25e8507184241c61b5bca9 SHA256 b0a23806dbfea0b5bdd2dfd4ada980cd99f5aa6b72744085752c168feb819f7c
 EBUILD psi-captchaforms-0.0.7_pre3377.ebuild 232 RMD160 30e0396394d42ef68a493b610d0c3287ef87457f SHA1 a401eec094de60b4ad25e8507184241c61b5bca9 SHA256 b0a23806dbfea0b5bdd2dfd4ada980cd99f5aa6b72744085752c168feb819f7c
+EBUILD psi-captchaforms-0.0.8_pre3409.ebuild 232 RMD160 30e0396394d42ef68a493b610d0c3287ef87457f SHA1 a401eec094de60b4ad25e8507184241c61b5bca9 SHA256 b0a23806dbfea0b5bdd2dfd4ada980cd99f5aa6b72744085752c168feb819f7c
 EBUILD psi-captchaforms-9999.ebuild 223 RMD160 10d3365e79136e43f73a06c69ac762a2a6e812cf SHA1 893fbc2dd5674ab89ce8cd82811ca53d1cdfd900 SHA256 1b278160c6c60a742afcaf0faa07861491032bcdb3dcab6c88ff28847e94e135
-MISC ChangeLog 326 RMD160 bc361635b0dd4009cddd6cca8127c191fd97eb71 SHA1 5957357f219f1acbc9884b8cf77c4c0b74b20538 SHA256 9d12e7b25be4f277fb81ce8f0f090836ac3095dc9c64d83d5489f6a8649f498b
+MISC ChangeLog 427 RMD160 d29609a4d270c2bebd2cc21b223f5818938924ef SHA1 07af2118d0224dfc73d3c96136d69b08744e9af7 SHA256 0ea417fec82aaa2a15681f4211e9c9e0ff6675c22fd278dbf624f17fc1d0321b
 MISC metadata.xml 373 RMD160 b36528b092618349b71b66537ed74ccf3d0edaf9 SHA1 94476282a4b0ba397a7aa20632827439b401d62e SHA256 7d3063546aee8fe0a66601605df9cec1be1830a3cda7144af0aa5b7b7a6e696e
