@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Dec 2010; Nikoli <nikoli@lavabit.com>
+  +psi-captchaforms-0.0.8_pre3409.ebuild:
+  version bump
+
   12 Dec 2010; Nikoli <nikoli@lavabit.com>
   +psi-captchaforms-0.0.7_pre3377.ebuild:
   version bump
